# vllm-router-webui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.zh-CN.md
src/: lib.rs  main.rs
static/: app.js  index.html
tests/: e2e.rs
