[package]
name = "vllm-router-webui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vllm-router-webui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vllm_router_rs = { path = "vendor/router" }

[dev-dependencies]
portpicker = "0.1"
tower = { version = "0.5", features = ["util"] }
